test/fails/bad_generics/tags5.lgl
tag a is vec<2>;
tag b is vec<2>;
tag c is b;
tag d is b;
tag e is c;

// Note also that bounds using tags can make using a function impossible
vec<2> uninvokable<`t : a>(`t x) {
    return x;
}

void main() {
    vec<2> fail = uninvokable<a>([1., 2.]);
}